[fix]: secure media preview urls and document frontend changes